Perbarui all file fix

--- a/career.html
+++ b/career.html
@@ -22,14 +22,9 @@
         <a href="#" class="navbar-logo">Biodata<span>ku</span></a>
 
         <div class="navbar-nav">
-            <a href="biodata.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="career.html">Career</a>
             <a href="contact.html">Contact</a>
-        </div>
-
-        <div class="navbar-extra">
-            <a href="#" id="search"><i data-feather="search"></i></a>
-            <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
         </div>
     </nav>
 
@@ -76,7 +71,7 @@
 <!-- Footer Section -->
     <footer>
         <div class="links">
-            <a href="biodata.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="career.html">Career</a>
             <a href="contact.html">Contact</a>
         </div>
@@ -85,14 +80,5 @@
             <p>Created by <a href="a">anandagilang</a>. | &copy; 2025.</p>
         </div>
     </footer>
-
-
-    <!-- feather icons -->
-    <script>
-        feather.replace();
-    </script>
-
-    <!-- My Javascript -->
-    <script src="js/script.js"></script>
 </body>
 </html>
